--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ box-shadow: 0 0.5rem 1rem rgba(0,0,0,0.15);
     </div>
 </nav>
 <!-- Carousel with Dark Overlay and Hero Section-->
-<div id="carouselExampleCaptions Home" class="carousel slide position-relative" data-bs-ride="carousel" dir="rtl">
+<div id="carouselExampleCaptions" class="carousel slide position-relative" data-bs-ride="carousel" dir="rtl">
   
   <!-- Carousel Items -->
   <div class="carousel-inner">
@@ -109,19 +109,17 @@ box-shadow: 0 0.5rem 1rem rgba(0,0,0,0.15);
   <div class="position-absolute top-0 start-0 w-100 h-100" style="background: rgba(0, 0, 0, 0.7); z-index: 1;"></div>
 
   <!-- Hero Content -->
-  <div class="col-sm-3 col-lg-10" style="z-index: 2;">
+  <div class="col-12 col-md-10 col-lg-6" style="z-index: 2;">
     <div class="position-absolute top-0 start-0 w-100 h-100 d-flex flex-column justify-content-center align-items-center px-4 px-md-5 text-white text-start" style="z-index: 2;">
-      <p class="text-uppercase text-info fw-semibold mb-1">The Best Courses</p>
-      <h1 class="fw-bold mb-3 fs-4 fs-md-1">The Best Online Learning Platform</h1>
-      <p class="mb-4 px-4 px-md-0" style="max-width: 500px;">
+      <p class="text-uppercase text-info fw-semibold mb-1 fw-sm-1 mt-5">The Best Courses</p>
+      <h1 class="fw-bold mb-3 fs-4 fs-md-1 fw-sm-1 mx-5">The Best Online Learning Platform</h1>
+      <p class="mb-4 px-3 px-md-0 fw-md-1 fs-6 fs-md-5 d-none d-md-block">
         DanishHub is an educational platform for Afghan girls, designed to empower them, increase their knowledge, and provide equal learning opportunities.
       </p>
       <a href="#join" class="btn btn-md btn-outline-light btn-primary" style="z-index: 2;">Join Now</a>
    </div>
   </div>
-
- 
-    <!-- Carousel Controls -->
+    <!-- Carousel Controls --> 
     <button
       class="carousel-control-prev"
       type="button"
