--- a/dark.html
+++ b/dark.html
@@ -87,7 +87,7 @@ footer a:hover{
     </div>
 </nav>
 <!-- Carousel with Dark Overlay and Hero Section-->
-<div id="carouselExampleCaptions Home" class="carousel slide position-relative" data-bs-ride="carousel" dir="rtl">
+<div id="carouselExampleCaptions" class="carousel slide position-relative" data-bs-ride="carousel" dir="rtl">
   
   <!-- Carousel Items -->
   <div class="carousel-inner">
@@ -105,9 +105,9 @@ footer a:hover{
   <!-- Hero Content -->
   <div class="col-sm-3 col-lg-10" style="z-index: 2;">
     <div class="position-absolute top-0 start-0 w-100 h-100 d-flex flex-column justify-content-center align-items-center px-4 px-md-5 text-white text-start" style="z-index: 2;">
-      <p class="text-uppercase text-info fw-semibold mb-1">The Best Courses</p>
-      <h1 class="fw-bold mb-3 fs-4 fs-md-1">The Best Online Learning Platform</h1>
-      <p class="mb-4 px-4 px-md-0" style="max-width: 500px;">
+      <p class="text-uppercase text-info fw-semibold mb-1 mt-5">The Best Courses</p>
+      <h1 class="fw-bold mb-3 fs-4 fs-md-1 mx-5">The Best Online Learning Platform</h1>
+      <p class="mb-4 px-4 px-md-0  d-none d-md-block">
         DanishHub is an educational platform for Afghan girls, designed to empower them, increase their knowledge, and provide equal learning opportunities.
       </p>
       <a href="#join" class="btn btn-md btn-outline-light btn-primary" style="z-index: 2;">Join Now</a>
